src/test/ui/span/issue-24690.stderr
warning: unused variable: `theOtherTwo`
  --> $DIR/issue-24690.rs:23:9
   |
23 |     let theOtherTwo = 2;
   |         ^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/issue-24690.rs:18:9
   |
18 | #![warn(unused)]
   |         ^^^^^^
   = note: #[warn(unused_variables)] implied by #[warn(unused)]
   = note: to disable this warning, consider using `_theOtherTwo` instead

warning: variable `theTwo` should have a snake case name such as `the_two`
  --> $DIR/issue-24690.rs:22:9
   |
22 |     let theTwo = 2;
   |         ^^^^^^
   |
   = note: #[warn(non_snake_case)] on by default

warning: variable `theOtherTwo` should have a snake case name such as `the_other_two`
  --> $DIR/issue-24690.rs:23:9
   |
23 |     let theOtherTwo = 2;
   |         ^^^^^^^^^^^

error: compilation successful
  --> $DIR/issue-24690.rs:21:1
   |
21 | / fn main() {
22 | |     let theTwo = 2;
23 | |     let theOtherTwo = 2;
24 | |     println!("{}", theTwo);
25 | | }
   | |_^

